--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Run GitGuardian secret scan
         env: 
-          CI_GUARDIAN_API_KEY: ${{ secrets.CI_GUARDIAN_API }}  
+          GITGUARDIAN_API_KEY: ${{ secrets.CI_GUARDIAN_API }}  
         run: ggshield secret scan repo .  
 
   lint:
