--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
   lint:
     timeout-minutes: 15
     name: Lint code
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     strategy:
         matrix:
             module: [ui, customer-auth, atm-locator]
