--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,19 +54,26 @@ jobs:
   test:
     name: Run Unit Tests
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        module: [customer-auth, atm-locator, ui]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16
-
+    # Lista archivos del módulo para verificar la configuración    
+      - name: Verify module files
+        working-directory: ./${{ matrix.module }}
+        run: ls -la
+    
+    # Instalar dependencias   
       - name: Install dependencies
-        run: npm install
-
-      - name: Run tests
+        working-directory: ./${{ matrix.module }}
+        run: npm ci
+    
+    # Ejecutar Unit Test
+      - name: Run Unit Tests
+        working-directory: ./${{ matrix.module }}    
         run: npm test
 
   sonarqube:
