--- a/customer-auth/package.json
+++ b/customer-auth/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node server.js",
     "auth": "nodemon server.js",
-    "lint": "npx eslint --fix ."
+    "lint": "npx eslint --fix .",
+    "test": "jest --coverage"
   },
   "author": "Jash Mehta",
   "license": "MIT",
