--- a/ui/package.json
+++ b/ui/package.json
@@ -8,7 +8,8 @@
     "build": "npm run build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0 --fix",
     "preview": "vite preview",
-    "client": "npm run dev"
+    "client": "npm run dev",
+    "test": "jest --coverage"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
