CI: RunUnitTest: Jest configuracion -Install jest

--- a/atm-locator/package.json
+++ b/atm-locator/package.json
@@ -26,5 +26,8 @@
     "nodemon": "^2.0.22",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
