--- a/customer-auth/package.json
+++ b/customer-auth/package.json
@@ -36,6 +36,7 @@
     "eslint": "^8.57.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.7"
   }
 }
