--- a/ui/package.json
+++ b/ui/package.json
@@ -45,6 +45,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "jest": "^29.7.0",
     "vite": "^4.3.2"
   }
 }
