--- a/customer-auth/package.json
+++ b/customer-auth/package.json
@@ -8,7 +8,7 @@
     "start": "node server.js",
     "auth": "nodemon server.js",
     "lint": "npx eslint --fix .",
-    "test": "jest --coverage"
+    "test": "cross-env DATABASE_HOST=localhost DB_URL=mongodb+srv://test.mongodb.net jest --coverage"
   },
   "author": "Jash Mehta",
   "license": "MIT",
@@ -32,11 +32,16 @@
     "swagger-ui-express": "^4.6.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "babel-jest": "^29.7.0",
     "concurrently": "^8.0.1",
+    "cross-env": "^7.0.3",
     "eslint": "^8.57.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "nodemon": "^3.1.7"
   }
 }
