--- a/ui/package.json
+++ b/ui/package.json
@@ -47,6 +47,7 @@
     "@vitejs/plugin-react": "^4.0.0",
     "babel-jest": "^29.7.0",
     "eslint": "^8.38.0",
+    "eslint-plugin-jest": "^28.9.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
