--- a/ui/package.json
+++ b/ui/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0 --fix",
     "preview": "vite preview",
     "client": "npm run dev",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage"
+    "test": "jest --coverage"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
