--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,7 +60,12 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
+      
+      - name: Set up Node.js  
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          
       - name: Install dependencies
         working-directory: ./${{ matrix.module }}
         run: npm ci
