--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,12 +51,12 @@ jobs:
         working-directory: ./${{ matrix.module }}
         run: npx eslint .
 
-  unit-test:
-    name: Run Unit Tests
+  # UNIT TESTS
+
+  unit-test-customer-auth:
+    name: Run Unit Tests for ui
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        module: [customer-auth, ui]
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -67,24 +67,53 @@ jobs:
           node-version: 16
 
       - name: Install dependencies
-        working-directory: ./${{ matrix.module }}
+        working-directory: ./customer-auth
         run: npm ci
     
       - name: Run tests with coverage
-        working-directory: ./${{ matrix.module }}
-        run: |
-          chmod +x ./node_modules/.bin/jest
-          ./node_modules/.bin/jest --coverage
+        working-directory: ./customer-auth
+        run: npm test
 
       - name: Upload coverage report
         uses: actions/upload-artifact@v3
         with:
-          name: ${{ matrix.module }}-coverage-report
-          path: ${{ matrix.module }}/coverage
+          name: customer-auth-coverage-report
+          path: customer-auth/coverage
+      
+  unit-test-ui:
+    name: Run Unit Tests for ui
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      
+      - name: Set up Node.js  
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+
+      - name: Install dependencies
+        working-directory: ./ui
+        run: npm ci
+    
+      - name: Run tests with coverage
+        working-directory: ./ui
+        run: npm test
+
+      - name: Upload coverage report
+        uses: actions/upload-artifact@v3
+        with:
+          name: ui-coverage-report
+          path: ui/coverage
 
   sonarqube:
     name: Run SonarQube Analysis
     runs-on: ubuntu-latest
+    needs: 
+      - unit-test-customer-auth
+      - unit-test-ui
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
