--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
       - develop
-      - feature/add-ci-configuration
+      - feature/docker-build
   pull_request:
     branches:
       - main
@@ -155,3 +155,28 @@ jobs:
             -Dsonar.javascript.lcov.reportPaths=customer-auth/coverage/lcov.info,ui/coverage/lcov.info \
             -Dsonar.exclusions=**/node_modules/**,**/__tests__/** \
             -Dsonar.coverage.exclusions=**/tests/**,**/__tests__/**,**/*.test.*,**/*.spec.*  
+
+
+  docker-build:
+    name: Build and Push Docker Images
+    runs-on: ubuntu-latest
+    needs: [lint, unit-test-customer-auth, unit-test-ui] # Se ejecuta después de lint y tests
+    strategy:
+      matrix:
+        module: [accounts, atm-locator, customer-auth, dashboard, loan, nginx, transactions, ui]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and Push Docker Image
+        working-directory: ./${{ matrix.module }}
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/${{ matrix.module }}:latest .
+          docker push ${{ secrets.DOCKER_USERNAME }}/${{ matrix.module }}:latest
+          
