--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,7 @@ jobs:
   # UNIT TESTS
 
   unit-test-customer-auth:
-    name: Run Unit Tests for ui
+    name: Run Unit Tests for auth
     runs-on: ubuntu-latest
     
     steps:
@@ -167,6 +167,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2 
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
