[feature/docker-build] DockerBuild&Push: atm-locator

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -163,7 +163,8 @@ jobs:
     needs: [lint, unit-test-customer-auth, unit-test-ui] # Se ejecuta después de lint y tests
     strategy:
       matrix:
-        module: [accounts, atm-locator, customer-auth, dashboard, loan, nginx, transactions, ui]
+        #module: [accounts, atm-locator, customer-auth, dashboard, loan, nginx, transactions, ui]
+        module: [atm-locator]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
