--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -164,7 +164,7 @@ jobs:
     strategy:
       matrix:
         #module: [accounts, atm-locator, customer-auth, dashboard, loan, nginx, transactions, ui]
-        module: [customer-auth]
+        module: [dashboard]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
