--- a/martianbank-helm-chart/templates/ui.yaml
+++ b/martianbank-helm-chart/templates/ui.yaml
@@ -16,7 +16,7 @@ spec:
         spec:
             containers:
                 - name: ui
-                  image: devopsxkeepcoding/ui:latest
+                  image: devopsxkeepcoding/martian-bank:ui-latest
                   imagePullPolicy: IfNotPresent
                   env: 
                     {{- if .Values.nginx.enabled }}
