--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,9 +3,7 @@ name: CI Pipeline
 on:
   push:
     branches:
-      - main
-      - develop
-      - feature/docker-build
+      - feature/semantic-release
   pull_request:
     branches:
       - main
@@ -177,15 +175,38 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      - name: Determine Semantic Version
+        id: version
+        run: echo "VERSION=$(npx semantic-release --dry-run | grep 'The next release version is' | awk '{print $NF}')" >> $GITHUB_ENV
+    
       - name: Build and Push Docker Image
         run: |
-          if [ "${{ matrix.module }}" = "ui" ] || [ "${{ matrix.module }}" = "nginx" ]; then
-            # Para 'ui', cambiamos el contexto al directorio 'ui'
-            docker build -f ui/Dockerfile -t devopsxkeepcoding/martian-bank:ui-latest ui/
-            docker push devopsxkeepcoding/martian-bank:ui-latest
-          else
-            # Para el resto de módulos, mantenemos el contexto en la raíz
-            docker build -f ${{ matrix.module }}/Dockerfile -t devopsxkeepcoding/martian-bank:${{ matrix.module }}-latest .
-            docker push devopsxkeepcoding/martian-bank:${{ matrix.module }}-latest
-          fi
+            if [ "${{ matrix.module }}" = "ui" ] || [ "${{ matrix.module }}" = "nginx" ]; then
+              docker build -f ui/Dockerfile -t devopsxkeepcoding/martian-bank:${{ matrix.module }}-${{ env.VERSION }} ui/
+              docker push devopsxkeepcoding/martian-bank:${{ matrix.module }}-${{ env.VERSION }}
+            else
+              docker build -f ${{ matrix.module }}/Dockerfile -t devopsxkeepcoding/martian-bank:${{ matrix.module }}-${{ env.VERSION }} .
+              docker push devopsxkeepcoding/martian-bank:${{ matrix.module }}-${{ env.VERSION }}
+            fi
           
+  semantic-release:
+    name: Semantic Release
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run Semantic Release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npx semantic-release
+        
