--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: '20.8.1'
 
       - name: Install dependencies for ${{ matrix.module }}
         working-directory: ./${{ matrix.module }}
@@ -62,7 +62,7 @@ jobs:
       - name: Set up Node.js  
         uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: '20.8.1'
 
       - name: Install dependencies
         working-directory: ./customer-auth
@@ -89,7 +89,7 @@ jobs:
       - name: Set up Node.js  
         uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: '20.8.1'
 
       - name: Install dependencies
         working-directory: ./ui
@@ -199,7 +199,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: '20.8.1'
 
       - name: Install dependencies
         run: npm ci
