--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,5 +1,6 @@
 {
     "branches": ["main", "develop","feature/semantic-release"],
+    "repositoryUrl": "https://github.com/devopsx-keepcoding/martian-bank",
     "plugins": [
       "@semantic-release/commit-analyzer",
       "@semantic-release/release-notes-generator",
