feat: Semantic release dependencies docker build job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -175,7 +175,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       
-      - name: Install semantic-release dependencies
+      - name: Install dependencies
         run: npm ci    
 
       - name: Determine Semantic Version
