--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -153,12 +153,32 @@ jobs:
             -Dsonar.javascript.lcov.reportPaths=customer-auth/coverage/lcov.info,ui/coverage/lcov.info \
             -Dsonar.exclusions=**/node_modules/**,**/__tests__/** \
             -Dsonar.coverage.exclusions=**/tests/**,**/__tests__/**,**/*.test.*,**/*.spec.*  
+            
+  semantic-release:
+    name: Semantic Release
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20.8.1'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run Semantic Release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npx semantic-release        
 
   docker-build:
     name: Build and Push Docker Images
     runs-on: ubuntu-latest
-    needs: [lint, unit-test-customer-auth, unit-test-ui] # Se ejecuta después de lint y tests
+    needs: [lint, unit-test-customer-auth, unit-test-ui,semantic-release] # Se ejecuta después de lint y tests
     strategy:
       matrix:
         module: [accounts, atm-locator, customer-auth, dashboard, loan, nginx, transactions, ui]
@@ -183,11 +203,21 @@ jobs:
       - name: Install dependencies
         run: npm ci    
 
+      - name: Debug Semantic Release
+        run: |
+          echo "Running semantic-release in dry-run mode for debugging..."
+          npx semantic-release --dry-run
+
       - name: Determine Semantic Version
         id: version
         run: |
-          VERSION=$(npx semantic-release | grep 'The next release version is' | awk '{print $NF}')
+          VERSION=$(npx semantic-release --dry-run | grep -Po '(?<=The next release version is )[^ ]+')
+          if [ -z "$VERSION" ]; then
+            echo "Error: VERSION is not generated."
+            exit 1
+          fi
           echo "VERSION=$VERSION" >> $GITHUB_ENV
+          echo "Determined version: $VERSION"
       
       - name: Debug VERSION
         run: echo "VERSION is ${{ env.VERSION }}"    
@@ -211,24 +241,5 @@ jobs:
           echo "Building module: ${{ matrix.module }}"
           echo "Using VERSION: ${{ env.VERSION }}"    
           
-  semantic-release:
-    name: Semantic Release
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20.8.1'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run Semantic Release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: npx semantic-release
+  
         
