--- a/ui/package.json
+++ b/ui/package.json
@@ -53,6 +53,12 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^29.7.0",
-    "vite": "^4.3.2"
+    "vite": "^4.3.2",
+    "semantic-release": "^24.2.0",
+    "@semantic-release/changelog": "^6.0.0",
+    "@semantic-release/git": "^10.0.0",
+    "@semantic-release/github": "^8.0.0",
+    "@semantic-release/commit-analyzer": "^10.0.0",
+    "@semantic-release/release-notes-generator": "^11.0.0"
   }
 }
