--- a/atm-locator/Dockerfile
+++ b/atm-locator/Dockerfile
@@ -4,7 +4,7 @@
 
 FROM --platform=linux/amd64 node:14
 WORKDIR /usr/src/app/
-COPY ./package*.json /usr/src/app/
+COPY ./package*.json /usr/src/app
 RUN npm install
 COPY . ./
 EXPOSE 8001
