fix: correct path issue in atm-locator Dockerfile v3

--- a/atm-locator/.releaserc.json
+++ b/atm-locator/.releaserc.json
@@ -8,8 +8,7 @@
         "preset": "angular",
         "releaseRules": [
           { "type": "fix", "release": "patch" },
-          { "type": "feat", "release": "minor" },
-          { "scope": "dockerfile", "release": "patch" }
+          { "type": "feat", "release": "minor" }
         ]
       }
     ],
