--- a/martianbank-helm-chart/templates/accounts.yaml
+++ b/martianbank-helm-chart/templates/accounts.yaml
@@ -18,8 +18,8 @@ spec:
     spec:
       containers:
         - name: accounts
-          image: devopsxkeepcoding/martian-bank:accounts-latest
-          imagePullPolicy: IfNotPresent          
+          image: devopsxkeepcoding/martian-bank:accounts-1.3.0
+          imagePullPolicy: Always          
           envFrom:
             - configMapRef:
                 name: configmap-martianbank
