--- a/martianbank-helm-chart/templates/customer-auth.yaml
+++ b/martianbank-helm-chart/templates/customer-auth.yaml
@@ -18,8 +18,8 @@ spec:
         spec:
             containers:
                 - name: customer-auth
-                  image: devopsxkeepcoding/martian-bank:customer-auth-latest
-                  imagePullPolicy: IfNotPresent 
+                  image: devopsxkeepcoding/martian-bank:customer-auth-1.3.0
+                  imagePullPolicy: Always 
                   env:
                     {{- if not .Values.mongodb.enabled }}
                       - name: DATABASE_HOST
