--- a/martianbank-helm-chart/templates/dashboard.yaml
+++ b/martianbank-helm-chart/templates/dashboard.yaml
@@ -18,8 +18,8 @@ spec:
         spec:
             containers:
                 - name: dashboard
-                  image: devopsxkeepcoding/martian-bank:dashboard-latest
-                  imagePullPolicy: IfNotPresent
+                  image: devopsxkeepcoding/martian-bank:dashboard-1.3.0
+                  imagePullPolicy: Always
                   env:
                       - name: SERVICE_PROTOCOL
                         value: {{.Values.SERVICE_PROTOCOL}}
