--- a/martianbank-helm-chart/templates/loan.yaml
+++ b/martianbank-helm-chart/templates/loan.yaml
@@ -18,8 +18,8 @@ spec:
     spec:
       containers:
         - name: loan
-          image: devopsxkeepcoding/martian-bank:loan-latest
-          imagePullPolicy: IfNotPresent
+          image: devopsxkeepcoding/martian-bank:loan-1.3.0
+          imagePullPolicy: Always
           envFrom:
             - configMapRef:
                 name: configmap-martianbank
