--- a/martianbank-helm-chart/templates/ui.yaml
+++ b/martianbank-helm-chart/templates/ui.yaml
@@ -16,8 +16,8 @@ spec:
         spec:
             containers:
                 - name: ui
-                  image: devopsxkeepcoding/martian-bank:ui-latest
-                  imagePullPolicy: IfNotPresent
+                  image: devopsxkeepcoding/martian-bank:ui-1.3.0
+                  imagePullPolicy: Always
                   env: 
                     {{- if .Values.nginx.enabled }}
                       - name: VITE_USERS_URL
