--- a/atm-locator/Dockerfile
+++ b/atm-locator/Dockerfile
@@ -2,8 +2,8 @@
 # Use of this source code is governed by a BSD-style
 # license that can be found in the LICENSE file.
 
-FROM --platform=linux/amd64 node:14
-WORKDIR /usr/src/app/
+FROM --platform=linux/amd64 node:20
+WORKDIR /usr/src/app
 COPY ./package*.json /usr/src/app/
 RUN npm install
 COPY . ./
