--- a/martianbank-helm-chart/templates/loan.yaml
+++ b/martianbank-helm-chart/templates/loan.yaml
@@ -16,6 +16,11 @@ spec:
       labels:
         app: loan
     spec:
+      initContainers:
+      #During this Pod's initialization, check that mongodb service is up and running before starting this pod
+        - name: check-message-bus-ready
+          image: busybox:latest
+          command: ['sh', '-c', 'until nc -vz mongodb 27017; do echo "Waiting for mongodb service"; sleep 2; done;']
       containers:
         - name: loan
           image: devopsxkeepcoding/martian-bank:loan-1.3.0
