--- a/martianbank-helm-chart/templates/transactions.yaml
+++ b/martianbank-helm-chart/templates/transactions.yaml
@@ -15,6 +15,11 @@ spec:
             labels:
                 app: transactions
         spec:
+            initContainers:
+            #During this Pod's initialization, check that mongodb service is up and running before starting this pod
+                - name: check-message-bus-ready
+                  image: busybox:latest
+                  command: ['sh', '-c', 'until nc -vz mongodb 27017; do echo "Waiting for mongodb service"; sleep 2; done;']
             containers:
                 - name: transactions
                   image: devopsxkeepcoding/martian-bank:transactions-1.3.0
