--- a/accounts/Dockerfile
+++ b/accounts/Dockerfile
@@ -5,8 +5,8 @@
 FROM --platform=linux/amd64 python
 
 RUN mkdir /service
-COPY protobufs/ /service/protobufs/
-COPY accounts/ /service/accounts/
+COPY ./protobufs/ /service/protobufs/
+COPY ./accounts/ /service/accounts/
 WORKDIR /service/accounts
 RUN python -m pip install --upgrade pip
 RUN python -m pip install -r requirements.txt
