--- a/dashboard/Dockerfile
+++ b/dashboard/Dockerfile
@@ -4,9 +4,9 @@
 
 FROM --platform=linux/amd64 python
 
-RUN mkdir /service
-COPY ./protobufs/ /service/protobufs/
-COPY ./dashboard/ /service/dashboard/
+WORKDIR /service
+COPY protobufs/ /service/protobufs/
+COPY dashboard/ /service/dashboard/
 WORKDIR /service/dashboard
 RUN python -m pip install --upgrade pip
 RUN python -m pip install -r requirements.txt
