--- a/transactions/Dockerfile
+++ b/transactions/Dockerfile
@@ -4,9 +4,9 @@
 
 FROM --platform=linux/amd64 python
 
-RUN mkdir /service
-COPY ./protobufs/ /service/protobufs/
-COPY ./transactions/ /service/transactions/
+WORKDIR /service
+COPY protobufs/ /service/protobufs/
+COPY transactions/ /service/transactions/
 WORKDIR /service/transactions
 RUN python -m pip install --upgrade pip
 RUN python -m pip install -r requirements.txt
