--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -4,8 +4,8 @@
 
 FROM --platform=linux/amd64 node:18-alpine
 WORKDIR /bankapp
-EXPOSE 3000
-COPY package.json package-lock.json ./
+COPY ui/package*.json ./
 RUN npm install --silent
 COPY . ./
+EXPOSE 3000
 CMD ["npm", "run", "ui"]
