--- a/customer-auth/Dockerfile
+++ b/customer-auth/Dockerfile
@@ -6,6 +6,6 @@ FROM --platform=linux/amd64 node:14
 WORKDIR /usr/src/app/
 COPY customer-auth/package*.json ./
 RUN npm install
-COPY . ./
+COPY customer-auth/ ./
 EXPOSE 8000
 CMD ["npm", "start"]
