--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -6,6 +6,7 @@ FROM --platform=linux/amd64 node:18-alpine
 WORKDIR /bankapp
 COPY ui/package*.json ./
 RUN npm install --silent
-COPY . ./
+COPY ui/ ./
+ENV PORT=3000
 EXPOSE 3000
 CMD ["npm", "run", "ui"]
