--- a/martianbank-helm-chart/templates/dashboard.yaml
+++ b/martianbank-helm-chart/templates/dashboard.yaml
@@ -3,65 +3,85 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-    name: dashboard
-    labels:
-        app: dashboard
+  name: dashboard
+  labels:
+    app: dashboard
 spec:
-    replicas: 1
-    selector:
-        matchLabels:
-            app: dashboard
-    template:
-        metadata:
-            labels:
-                app: dashboard
-        spec:
-            initContainers:
-            #During this Pod's initialization, check that mongodb service is up and running before starting this pod
-                - name: check-message-bus-ready
-                  image: busybox:latest
-                  command: ['sh', '-c', 'until nc -vz mongodb 27017; do echo "Waiting for mongodb service"; sleep 2; done;']
-            containers:
-                - name: dashboard
-                  image: devopsxkeepcoding/martian-bank:dashboard-1.3.0
-                  imagePullPolicy: Always
-                  env:
-                      - name: SERVICE_PROTOCOL
-                        value: {{.Values.SERVICE_PROTOCOL}}
-                      - name: ACCOUNT_HOST
-                        value: accounts
-                      - name: LOAN_HOST
-                        value: loan
-                      - name: TRANSACTION_HOST
-                        value: transactions
-                      - name: CUSTOMER_AUTH_HOST
-                        value: customer-auth
-                      - name: ATM_LOCATOR_HOST
-                        value: atm-locator
-                  envFrom:
-                      - configMapRef:
-                          name: configmap-martianbank
-                  livenessProbe:
-                    tcpSocket:
-                      port: 5000
-                    initialDelaySeconds: 10
-                    periodSeconds: 20
-                  readinessProbe:
-                    tcpSocket:
-                      port: 5000
-                    initialDelaySeconds: 10
-                    periodSeconds: 20
-                  resources:
-                    requests:
-                      memory: {{ .Values.resources.requests.memory }}
-                      cpu: {{ .Values.resources.requests.cpu }}
-                    limits:
-                      memory: {{ .Values.resources.limits.memory }}
-                      cpu: {{ .Values.resources.limits.cpu }}
-            nodeSelector:   
-              {{- if .Values.nodeSelector.enabled }}
-                role: {{ .Values.nodeSelector.role }}
-              {{- end }}
+  replicas: 1
+  selector:
+    matchLabels:
+      app: dashboard
+  template:
+    metadata:
+      labels:
+        app: dashboard
+    spec:
+      initContainers:
+        - name: check-message-bus-ready
+          image: busybox:latest
+          command: ['sh', '-c', 'until nc -vz $(DATABASE_HOST) 27017; do echo "Waiting for mongodb service"; sleep 2; done;']
+          env:
+            - name: DATABASE_HOST
+              valueFrom:
+                secretKeyRef:
+                  name: martianbanktest-mongodb-secret
+                  key: database-host
+      containers:
+        - name: dashboard
+          image: devopsxkeepcoding/martian-bank:dashboard-1.3.0
+          imagePullPolicy: Always
+          env:
+            - name: SERVICE_PROTOCOL
+              value: {{.Values.SERVICE_PROTOCOL}}
+            - name: ACCOUNT_HOST
+              value: accounts
+            - name: LOAN_HOST
+              value: loan
+            - name: TRANSACTION_HOST
+              value: transactions
+            - name: CUSTOMER_AUTH_HOST
+              value: customer-auth
+            - name: ATM_LOCATOR_HOST
+              value: atm-locator
+            - name: DB_URL
+              value: {{ .Values.mongodb.urlTemplate }}
+            - name: MONGODB_ROOT_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: martianbanktest-mongodb-secret
+                  key: mongodb-root-username
+            - name: MONGODB_ROOT_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: martianbanktest-mongodb-secret
+                  key: mongodb-root-password
+            - name: DATABASE_HOST
+              valueFrom:
+                secretKeyRef:
+                  name: martianbanktest-mongodb-secret
+                  key: database-host
+          livenessProbe:
+            tcpSocket:
+              port: 5000
+            initialDelaySeconds: 10
+            periodSeconds: 20
+          readinessProbe:
+            tcpSocket:
+              port: 5000
+            initialDelaySeconds: 10
+            periodSeconds: 20
+          resources:
+            requests:
+              memory: {{ .Values.resources.requests.memory }}
+              cpu: {{ .Values.resources.requests.cpu }}
+            limits:
+              memory: {{ .Values.resources.limits.memory }}
+              cpu: {{ .Values.resources.limits.cpu }}
+      nodeSelector:   
+        {{- if .Values.nodeSelector.enabled }}
+          role: {{ .Values.nodeSelector.role }}
+        {{- end }}
+
 ---
 apiVersion: v1
 kind: Service
