--- a/martianbank-helm-chart/templates/accounts.yaml
+++ b/martianbank-helm-chart/templates/accounts.yaml
@@ -17,39 +17,20 @@ spec:
         app: accounts
     spec:
       initContainers:
+      #During this Pod's initialization, check that mongodb service is up and running before starting this pod
         - name: check-message-bus-ready
           image: busybox:latest
-          command: ['sh', '-c', 'until nc -vz $(DATABASE_HOST) 27017; do echo "Waiting for mongodb service"; sleep 2; done;']
-          env:
-            - name: DATABASE_HOST
-              valueFrom:
-                secretKeyRef:
-                  name: martianbanktest-mongodb-secret
-                  key: database-host
+          command: ['sh', '-c', 'until nc -vz mongodb 27017; do echo "Waiting for mongodb service"; sleep 2; done;']
       containers:
         - name: accounts
           image: devopsxkeepcoding/martian-bank:accounts-1.3.0
-          imagePullPolicy: Always
+          imagePullPolicy: Always          
+          envFrom:
+            - configMapRef:
+                name: configmap-martianbank
           env:
             - name: SERVICE_PROTOCOL
               value: {{.Values.SERVICE_PROTOCOL}}
-            - name: DB_URL
-              value: {{ .Values.mongodb.urlTemplate }}
-            - name: MONGODB_ROOT_USERNAME
-              valueFrom:
-                secretKeyRef:
-                  name: martianbanktest-mongodb-secret
-                  key: mongodb-root-username
-            - name: MONGODB_ROOT_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: martianbanktest-mongodb-secret
-                  key: mongodb-root-password
-            - name: DATABASE_HOST
-              valueFrom:
-                secretKeyRef:
-                  name: martianbanktest-mongodb-secret
-                  key: database-host
           livenessProbe:
             tcpSocket:
               port: 50051
