--- a/martianbank-helm-chart/templates/loan.yaml
+++ b/martianbank-helm-chart/templates/loan.yaml
@@ -17,39 +17,20 @@ spec:
         app: loan
     spec:
       initContainers:
+      #During this Pod's initialization, check that mongodb service is up and running before starting this pod
         - name: check-message-bus-ready
           image: busybox:latest
-          command: ['sh', '-c', 'until nc -vz $(DATABASE_HOST) 27017; do echo "Waiting for mongodb service"; sleep 2; done;']
-          env:
-            - name: DATABASE_HOST
-              valueFrom:
-                secretKeyRef:
-                  name: martianbanktest-mongodb-secret
-                  key: database-host
+          command: ['sh', '-c', 'until nc -vz mongodb 27017; do echo "Waiting for mongodb service"; sleep 2; done;']
       containers:
         - name: loan
           image: devopsxkeepcoding/martian-bank:loan-1.3.0
           imagePullPolicy: Always
+          envFrom:
+            - configMapRef:
+                name: configmap-martianbank
           env:
             - name: SERVICE_PROTOCOL
               value: {{.Values.SERVICE_PROTOCOL}}
-            - name: DB_URL
-              value: {{ .Values.mongodb.urlTemplate }}
-            - name: MONGODB_ROOT_USERNAME
-              valueFrom:
-                secretKeyRef:
-                  name: martianbanktest-mongodb-secret
-                  key: mongodb-root-username
-            - name: MONGODB_ROOT_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: martianbanktest-mongodb-secret
-                  key: mongodb-root-password
-            - name: DATABASE_HOST
-              valueFrom:
-                secretKeyRef:
-                  name: martianbanktest-mongodb-secret
-                  key: database-host
           livenessProbe:
             tcpSocket:
               port: 50053
@@ -64,7 +45,7 @@ spec:
             requests:
               memory: {{ .Values.resources.requests.memory }}
               cpu: {{ .Values.resources.requests.cpu }}
-            limits:
+          limits:
               memory: {{ .Values.resources.limits.memory }}
               cpu: {{ .Values.resources.limits.cpu }}
       nodeSelector:   
